docker-registry-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-ui
  namespace: docker-registry
spec:
  selector:
    app: registry-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
